--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
